pod-red.yaml
apiVersion: v1
kind: Pod
metadata:
  name: red-webapp-color
  labels:
    app: web
spec:
  containers:
    - name: red-webapp-color
      image: mmumshad/simple-webapp-color
      ports:
      - containerPort: 8080
