service-nodeport-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-nodeport-web

spec:
  type: NodePort
  selector:
    app: web
  ports:
    - targetPort: 8080
      port: 8080
      nodePort: 30008
