example-ingress.yaml
apiVersion: networking.k8s.io/v1
   
kind: Ingress
   
metadata:
   
  name: example-ingress
   
  annotations:
   
    nginx.ingress.kubernetes.io/rewrite-target: /$1
   
spec:
   
  rules:
   
    - host: hello-world.info
   
      http:
   
        paths:
   
          - path: /v2
   
            pathType: Prefix
   
            backend:
   
              service:
   
                name: web2
   
                port:
   
                  number: 8080
